// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a new exercise 1`] = `
{
  "ExerciseAdd": {
    "error": "EMPTY",
    "exercise": {
      "breakTime": "60",
      "id": "FROZEN-ID",
      "muscleGroup": "BACK",
      "name": "Pull Down",
      "repetitions": "10",
      "series": "3",
      "user": {
        "firstName": "User 1 firstName",
      },
      "weight": "50",
      "workoutSplit": {
        "id": "FROZEN-ID",
        "name": "WorkoutSplit NaN name",
      },
    },
    "success": "Exercise created successfully",
  },
}
`;

exports[`should not add a new exercise for a workout split with removed workout 1`] = `
{
  "ExerciseAdd": {
    "error": "Workout not found",
    "exercise": "EMPTY",
    "success": "EMPTY",
  },
}
`;

exports[`should not add a new exercise for removed workout split 1`] = `
{
  "ExerciseAdd": {
    "error": "Workout Split not found",
    "exercise": "EMPTY",
    "success": "EMPTY",
  },
}
`;
